@@ -1,6 +1,7 @@
 package com.nimbusds.oauth2.sdk.auth;
 
 
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
@@ -48,7 +49,7 @@ public class JWTAuthenticationClaimsSetTest extends TestCase {
 		assertEquals(clientID, claimsSet.getClientID());
 		assertEquals(clientID.getValue(), claimsSet.getIssuer().getValue());
 		assertEquals(clientID.getValue(), claimsSet.getSubject().getValue());
-		assertEquals(aud, claimsSet.getAudience());
+		assertEquals(aud, claimsSet.getAudience().get(0));
 
 		// 4 min < exp < 6 min
 		final long now = new Date().getTime();
@@ -100,6 +101,62 @@ public class JWTAuthenticationClaimsSetTest extends TestCase {
 	}
 
 
+	public void testMultipleAudiences()
+		throws Exception {
+
+		ClientID clientID = new ClientID("123");
+		List<Audience> audienceList = Arrays.asList(new Audience("https://c2id.com"), new Audience("https://c2id.com/token"));
+		final long now = new Date().getTime() / 1000l * 1000l; // reduce precision
+		final Date fiveMinutesFromNow = new Date(now + 4*60*1000l);
+
+		JWTAuthenticationClaimsSet claimsSet = new JWTAuthenticationClaimsSet(clientID, audienceList, fiveMinutesFromNow, null, null, null);
+
+		// Test getters
+		assertEquals(clientID, claimsSet.getClientID());
+		assertEquals(clientID.getValue(), claimsSet.getIssuer().getValue());
+		assertEquals(clientID.getValue(), claimsSet.getSubject().getValue());
+		assertEquals(audienceList, claimsSet.getAudience());
+		assertEquals(fiveMinutesFromNow, claimsSet.getExpirationTime());
+		assertNull(claimsSet.getIssueTime());
+		assertNull(claimsSet.getNotBeforeTime());
+		assertNull(claimsSet.getJWTID());
+		assertNull(claimsSet.getCustomClaims());
+
+		// Test output to JSON object
+		JSONObject jsonObject = claimsSet.toJSONObject();
+		assertEquals("123", jsonObject.get("iss"));
+		assertEquals("123", jsonObject.get("sub"));
+		List<String> audList = JSONObjectUtils.getStringList(jsonObject, "aud");
+		assertEquals("https://c2id.com", audList.get(0));
+		assertEquals("https://c2id.com/token", audList.get(1));
+		assertEquals(2, audList.size());
+		assertEquals(fiveMinutesFromNow.getTime() / 1000l, JSONObjectUtils.getLong(jsonObject, "exp"));
+		assertEquals(4, jsonObject.size());
+
+		// Test output to JWT claims set
+		JWTClaimsSet jwtClaimsSet = claimsSet.toJWTClaimsSet();
+		assertEquals("123", jwtClaimsSet.getIssuer());
+		assertEquals("123", jwtClaimsSet.getSubject());
+		assertEquals("https://c2id.com", jwtClaimsSet.getAudience().get(0));
+		assertEquals("https://c2id.com/token", jwtClaimsSet.getAudience().get(1));
+		assertEquals(2, jwtClaimsSet.getAudience().size());
+		assertEquals(fiveMinutesFromNow.getTime() / 1000l, jwtClaimsSet.getExpirationTime().getTime() / 1000);
+		assertEquals(4, jwtClaimsSet.toJSONObject().size());
+
+		// Test parse
+		JWTAuthenticationClaimsSet parsed = JWTAuthenticationClaimsSet.parse(jwtClaimsSet);
+		assertEquals(clientID, parsed.getClientID());
+		assertEquals(clientID.getValue(), parsed.getIssuer().getValue());
+		assertEquals(clientID.getValue(), parsed.getSubject().getValue());
+		assertEquals(audienceList, parsed.getAudience());
+		assertEquals(fiveMinutesFromNow, parsed.getExpirationTime());
+		assertNull(parsed.getIssueTime());
+		assertNull(parsed.getNotBeforeTime());
+		assertNull(parsed.getJWTID());
+		assertNull(parsed.getCustomClaims());
+	}
+
+
 	public void testNullJTI() {
 
 		final long now = new Date().getTime();
@@ -107,7 +164,7 @@ public class JWTAuthenticationClaimsSetTest extends TestCase {
 
 		JWTAuthenticationClaimsSet claimsSet = new JWTAuthenticationClaimsSet(
 			new ClientID("123"),
-			new Audience("https://c2id.com/token"),
+			new Audience("https://c2id.com/token").toSingleAudienceList(),
 			fiveMinutesFromNow,
 			null, // nbf
 			null, // iat
